--- a/index.html
+++ b/index.html
@@ -981,13 +981,13 @@
   <!-- JavaScript -->
   <script>
     // GitHub API 配置 - 请确保这些值已正确设置
-    const GITHUB_REPO_OWNER = 'YOUR_GITHUB_USERNAME'; // 必须替换为实际的GitHub用户名
-    const GITHUB_REPO_NAME = 'china-travel-guide-data'; // 数据仓库名称
+    const GITHUB_REPO_OWNER = 'buzai07'; // 必须替换为实际的GitHub用户名
+    const GITHUB_REPO_NAME = 'Travel_Guide'; // 数据仓库名称
     const GITHUB_API_BASE = 'https://api.github.com';
     
     // GitHub Fine-grained Personal Access Token
     // 注意：这是一个安全风险，请确保只授予最小必要权限
-    const GITHUB_TOKEN = 'YOUR_GITHUB_FINE_GRAINED_TOKEN'; // 必须替换为实际的GitHub Fine-grained Personal Access Token
+    const GITHUB_TOKEN = 'buzai'; // 必须替换为实际的GitHub Fine-grained Personal Access Token
     
     // DOM 元素
     const submitContributionBtn = document.getElementById('submit-contribution');
