--- a/index.html
+++ b/index.html
@@ -982,7 +982,7 @@
   <script>
     // GitHub API 配置 - 请确保这些值已正确设置
     const GITHUB_REPO_OWNER = 'buzai07'; // 必须替换为实际的GitHub用户名
-    const GITHUB_REPO_NAME = 'Travel_Guide'; // 数据仓库名称
+    const GITHUB_REPO_NAME = 'Travel_Guide.github,io'; 
     const GITHUB_API_BASE = 'https://api.github.com';
     
     // GitHub Fine-grained Personal Access Token
