--- a/index.html
+++ b/index.html
@@ -1044,7 +1044,7 @@
       event.preventDefault();
       
       // 检查GitHub令牌是否配置
-      if (!GITHUB_TOKEN || GITHUB_TOKEN === 'YOUR_GITHUB_FINE_GRAINED_TOKEN') {
+      if (!GITHUB_TOKEN || GITHUB_TOKEN === 'buzai') {
         alert('GitHub storage is not properly configured. Please contact the site administrator.');
         return;
       }
