--- a/index.html
+++ b/index.html
@@ -1044,10 +1044,10 @@
       event.preventDefault();
       
       // 检查GitHub令牌是否配置
-      if (!GITHUB_TOKEN || GITHUB_TOKEN === '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') {
-        alert('GitHub storage is not properly configured. Please contact the site administrator.');
-        return;
-      }
+      // if (!GITHUB_TOKEN || GITHUB_TOKEN === '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') {
+      //   alert('GitHub storage is not properly configured. Please contact the site administrator.');
+      //   return;
+      // }
       
       const city = document.getElementById('city').value;
       const spot = document.getElementById('spot').value;
